traefik/traefik2/deploy.2.3.5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-system
  name: traefik
  labels:
    k8s-app: traefik
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 20%
  selector:
    matchLabels:
      k8s-app: traefik
  template:
    metadata:
      labels:
        k8s-app: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 5
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        traefik2: traefik2
      priorityClassName: cluster-core-pod-critical
      containers:
      - name: traefik
        image: harbor.fcbox.com/common/traefik:v2.3.5
        args:
          - --api.insecure
          - --api.dashboard
          - --log
          - --log.level=INFO
          - --log.filepath=/var/log/traefik.log
          - --accesslog=true
          - --accesslog.bufferingsize=500
          - --accesslog.filepath=/var/log/traefik-access.log
          - --accesslog.fields.names.StartUTC=drop
          - --accesslog.fields.headers.defaultmode=keep
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --entryPoints.web.forwardedHeaders.trustedIPs=0.0.0.0/0        
          - --entryPoints.websecure.forwardedHeaders.trustedIPs=0.0.0.0/0
          - --metrics.prometheus=true
          - --ping=true
          - --metrics.prometheus.entrypoint=metrics
          - --entryPoints.metrics.address=:8082
          - --providers.kubernetesingress.disablepasshostheaders=true
          - --providers.kubernetescrd
          - --providers.kubernetesingress=true
        ports:
          - name: web
            containerPort: 80
            hostPort: 80
          - name: websecure
            containerPort: 443
            hostPort: 443
          - name: admin
            containerPort: 8080
            hostPort: 8080
          - name: http-metrics
            containerPort: 8082
            hostPort: 8082
        resources:
          limits:
            cpu: "24"
            memory: "32Gi"
          requests:
            cpu: "4"
            memory: "4Gi"
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1             
          timeoutSeconds: 3
        readinessProbe: 
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1             
          timeoutSeconds: 3
        volumeMounts:
        - mountPath: "/var/log"
          name: "logdir"
        - mountPath: "/etc/localtime"
          name: "localtime"
      volumes:
      - name: "localtime"
        hostPath:
          path: "/etc/localtime"
      - name: "logdir"
        hostPath:
          path: "/app/applogs/traefik"
